# euler

./: .13.rb.swp  .gitignore  100.rb  12.rb  14.rb  14n.rb  16.rb  18.rb  2.rb  20.rb  21.rb  22.rb  23.rb  24.rb  26.rb  27.rb  29.rb  3.rb  31.rb  32.rb  33.rb  36.rb  37.rb  39.rb  3b.rb  40.rb  43.rb  44.rb  45.rb  46.rb  47.rb  49.rb  50.rb  51.RB  51.rb  52.rb  53.rb  54.rb  55.rb  56.rb  (+58 more)
archive/: AGENTS.md  DEMO_REVALIDATION.sh  SOLUTIONS_TABLE.md  VALIDATION_README.md
c/: 001.c  002.c  003.c  004.c  005.c  006.c  007.c  008.c  009.c  010.c  011.c  012.c  013.c  014.c  015.c  016.c  017.c  018.c  019.c  020.c  021.c  022.c  023.c  024.c  025.c  026.c  027.c  028.c  029.c  030.c  031.c  032.c  033.c  034.c  035.c  036.c  037.c  038.c  039.c  (+1502 more)
rust/: CLAUDE.md  Cargo.toml  bench.sh  bench_results.csv  c_vs_rust.txt  gen_status.py  profile_slow.py  rerun_new_65.tsv  slowest_100.csv  validate_one.sh  validated.json
rust/euler_utils/: Cargo.toml
rust/euler_utils/src/: binomial.rs  crt.rs  fraction.rs  lib.rs  matrix.rs  modular.rs  number.rs  primes.rs
rust/profiles/: SUMMARY.md  p238.prof  p338.prof  p378.prof  p379.prof  p391.prof  p415.prof  p427.prof  p448.prof  p452.prof  p461.prof  p478.prof  p507.prof  p513.prof  p536.prof  p543.prof  p545.prof  p552.prof  p558.prof  p559.prof  p563.prof  p584.prof  p606.prof  p611.prof  p614.prof  p655.prof  p677.prof  p681.prof  p691.prof  p693.prof  p705.prof  p708.prof  p715.prof  p735.prof  p737.prof  p774.prof  p782.prof  p797.prof  p829.prof  p846.prof  (+12 more)
rust/solutions/: Cargo.toml
rust/solutions/src/: main.rs
(+1274 files in other folders)
