[workspace]
members = ["euler_utils", "solutions"]
resolver = "2"

[workspace.dependencies]
num = "0.4"
num-integer = "0.1"
num-traits = "0.2"
primal = "0.3"
itertools = "0.14"
rayon = "1.10"
fxhash = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false

[profile.profiling]
inherits = "release"
strip = "none"
debug = 1
