[package]
name = "solutions"
version = "0.1.0"
edition = "2024"

[dependencies]
euler_utils = { path = "../euler_utils" }
num = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
fxhash = { workspace = true }

# Each solution is a separate binary in src/bin/pNNN.rs
# Run with: cargo run --release --bin pNNN
